ChangeLog

Name: William lai
Date: 10-20-2013
Description: Several bug fixes, pseudo-FEN parser
    * src/chess/Pawn.java: Now has no moves if it's on the 1st or 8th row. This is so that the AI doesn't freeze (since it is unable to account for promotions at the moment).
    * src/chess/StandardChessGame.java: Created pseudo-FEN parser so that you can load a position into the program for testing purposes. Also fixed en passant bug where the captured pawn did not get removed from the board.

Name: William Lai
Date: 10-20-2013
Description: Slight efficiency and AI improvement, packaged files
    * src/chess/*.java: Moved files into a package named "chess"
    * src/chess/Board.java: Added new private member variables for the squares of each King, to aid in efficiency elsewhere
    * src/chess/ComputerPlayer.java: Fixed the AI refusing to make move, as well as AI not seeing incoming checkmate
    * src/chess/StandardChessGame.java: Used Board.java change to efficiently find king locations when checking for check. Also now has rook animating after king when castling

Name: Vincent Wong
Date: 10-19-2013
Description: Selected block highlight
    * src/StandardChessGame.java: Slight modification to paint order
    * src/StandardChessGameGraphics.java: Uses an actual image to highlight a selected block
    * New files: Images/blockSelected.png
    
Name: William Lai
Date: 10-18-2013
Description: Restructuring of program
    * src/Board.java: Included "state" variables to determine if a board represents checkmate/stalemate for either side, to prevent recalculating for subsequent calls for the same position
    * src/ComputerPlayer.java: Changed static evaluation to account for changes to Board.java
    * src/Definitions.java: Added new enum for the "state" of a board
    * src/StandardChessGame.java: Changed move procedure to account for changes to Board.java. Also fixed the inability for the game to detect checkmate/stalemate (a bug that came up from the last commit).